# autogen-graph

./: README.md  hello.py  pyproject.toml
.github/: release.yaml
.github/workflow/: build.yaml
.github/workflows/: build.yaml
examples/: conditional.py  loop.py  parallel.py  sequential.py
src/autogen_graph/: _digraph_group_chat.py
tests/: test_digraph_group_chat.py
