[project]
name = "autogen-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogen-agentchat>=0.5.1",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.4",
]

[tool.ruff]
include = ["src/**"]
line-length = 120
fix = true

[tool.ruff.format]
docstring-code-format = true

[tool.uv]
prerelease = "allow"
